--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </style>
 </head>
 <body>
-    <div class="chat"><ul id="log"></ul></div>
+    <div class="chat"><ol id="log"></ol></div>
     <div class="controls">
         <form method="GET" action=".">
             <input type="submit" value="Send" />
